--- a/noticias.html
+++ b/noticias.html
@@ -40,19 +40,10 @@
 
 
     <div class="position-relative">
-        <!-- Imagem de fundo -->
-        <div class="position-absolute top-0 start-0 w-100 h-100" style="
-    background-image: url('images/montanhas-suave.jpg');
-    background-size: cover;
-    background-position: center;
-    opacity: 0.5;
-    z-index: 0;">
-        </div>
-
+     
         <!-- Conteúdo principal -->
         <div class="container py-5 px-3 px-md-5">
-            <h1 class="mb-5 text-center display-4 fw-bold border-bottom pb-3"
-                style="text-shadow: 1px 1px 4px rgba(0,0,0,0.7);">Notícias da Escalada</h1>
+            <h1 class="mb-5 text-center display-4 fw-bold border-bottom pb-3">Notícias da Escalada</h1>
 
             <!-- Notícia 1 -->
             <div class="card mb-4 shadow-sm border-0 rounded-4">
@@ -146,74 +137,157 @@
             </div>
         </div>
 
-        <!-- Footer com links -->
-        <footer class="myFoot" style="opacity: 0.8;">
-            <div class="container text-start pt-5 pb-2">
-                <div class="row gx-3">
-                    <div class="col">
-                        <h3 class="text-start display-5 fs-3">Info</h3>
-                    </div>
-                    <div class="col">
-                        <h3 class="text-start display-5 fs-3">Explorar</h3>
-                    </div>
-                    <div class="col">
-                        <h3 class="text-start display-5 fs-3">Redes</h3>
-                    </div>
+           <!-- Footer com links -->
+    <footer class="myFoot">
+        <div class="container text-start pt-5 pb-2">
+            <div class="row gx-3">
+                <div class="col">
+                    <h3 class="text-start display-5 fs-3">Info</h3>
                 </div>
-                <div class="row gx-3">
-                    <div class="col">
-                        <p><a href="#"
-                                class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Sobre
-                                o site</a></p>
-                    </div>
-                    <div class="col">
-                        <p><a href="setores-vias.html"
-                                class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Setores
-                                e Vias</a></p>
-                    </div>
-                    <div class="col">
-                        <p><a href="#"
-                                class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Instagram</a>
-                        </p>
-                    </div>
+                <div class="col">
+                    <h3 class="text-start display-5 fs-3">Explorar</h3>
                 </div>
-                <div class="row gx-3">
-                    <div class="col">
-                        <p><a href="#"
-                                class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Contato</a>
-                        </p>
-                    </div>
-                    <div class="col">
-                        <p><a href="equipamentos.html"
-                                class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Equipamentos
-                            </a></p>
-                    </div>
-                    <div class="col">
-                        <p><a href="#"
-                                class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">YouTube</a>
-                        </p>
-                    </div>
-                </div>
-                <div class="row gx-3">
-                    <div class="col">
-                        <p><a href="#"
-                                class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Termos
-                                de uso</a></p>
-                    </div>
-                    <div class="col">
-                        <p><a href="noticias.html"
-                                class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Notícias</a>
-                        </p>
-                    </div>
-                    <div class="col">
-                        <p><a href="#"
-                                class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Enviar
-                                sugestão de setor</a></p>
-                    </div>
+                <div class="col">
+                    <h3 class="text-start display-5 fs-3">Redes</h3>
                 </div>
             </div>
-        </footer>
+            <div class="row gx-3">
+                <div class="col">
+                    <p> <a class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"
+                            href="#" data-bs-toggle="modal" data-bs-target="#modalSobre">Sobre o site</a>
+                    </p>
+                </div>
+                <div class="col">
+                    <p><a href="setores-vias.html"
+                            class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Setores
+                            e Vias</a></p>
+                </div>
+                <div class="col">
+                    <p><a href="https://www.instagram.com" target="_blank"
+                            class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Instagram</a>
+                    </p>
+                </div>
+            </div>
+            <div class="row gx-3">
+                <div class="col">
+                    <p><a class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"
+                            href="#" data-bs-toggle="modal" data-bs-target="#modalContato">Contato</a></p>
+                </div>
+                <div class="col">
+                    <p><a href="equipamentos.html"
+                            class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Equipamentos
+                        </a></p>
+                </div>
+                <div class="col">
+                    <p><a href="https://www.youtube.com/" target="_blank"
+                            class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">YouTube</a>
+                    </p>
+                </div>
+            </div>
+            <div class="row gx-3">
+                <div class="col">
+                    <p><a class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"
+                            href="#" data-bs-toggle="modal" data-bs-target="#modalTermos">Termos de Uso</a></p>
+                </div>
+                <div class="col">
+                    <p><a href="noticias.html"
+                            class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Notícias</a>
+                    </p>
+                </div>
+                <div class="col">
+                    <p><a href="#" data-bs-toggle="modal" data-bs-target="#modalSugestao"
+                            class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Enviar
+                            sugestão de setor</a></p>
+                </div>
+            </div>
+        </div>
+    </footer>
 
+
+    <!-- Modais dos Links do Footer -->
+
+    <!-- Modal Sobre -->
+    <div class="modal fade" id="modalSobre" tabindex="-1" aria-labelledby="modalSobreLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="modalSobreLabel">Sobre o site</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                </div>
+                <div class="modal-body">
+                    Este site foi desenvolvido como projeto acadêmico para a disciplina de Web Design.
+                    O objetivo é divulgar informações sobre setores e vias de escalada.
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Modal Contato -->
+    <div class="modal fade" id="modalContato" tabindex="-1" aria-labelledby="modalContatoLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="modalContatoLabel">Contato</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                </div>
+                <div class="modal-body">
+                    Dúvidas ou sugestões? Entre em contato pelo e-mail: <strong>contato@segpronta.com</strong>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Modal Termos de Uso -->
+    <div class="modal fade" id="modalTermos" tabindex="-1" aria-labelledby="modalTermosLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="modalTermosLabel">Termos de Uso</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                </div>
+                <div class="modal-body">
+                    As informações neste site são de uso educativo. Escalar é uma atividade de risco, escale com
+                    segurança.
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Modal Enviar Sugestão -->
+    <div class="modal fade" id="modalSugestao" tabindex="-1" aria-labelledby="modalSugestaoLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <form>
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="modalSugestaoLabel">Sugestão de Setor</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="mb-3">
+                            <label for="nome" class="form-label">Seu nome</label>
+                            <input type="text" class="form-control" id="nome" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="local" class="form-label">Nome do setor</label>
+                            <input type="text" class="form-control" id="local" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="local" class="form-label">Local do setor</label>
+                            <input type="text" class="form-control" id="local" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="descricao" class="form-label">Descrição</label>
+                            <textarea class="form-control" id="descricao" rows="3" required></textarea>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="submit" class="btn btn-success">Enviar</button>
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous">
