--- a/index.html
+++ b/index.html
@@ -160,6 +160,8 @@
         </div>
     </div>
 
+
+
     <!-- Footer com links -->
     <footer class="myFoot">
         <div class="container text-start pt-5 pb-2">
@@ -176,9 +178,9 @@
             </div>
             <div class="row gx-3">
                 <div class="col">
-                    <p><a href="#"
-                            class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Sobre
-                            o site</a></p>
+                    <p> <a class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"
+                            href="#" data-bs-toggle="modal" data-bs-target="#modalSobre">Sobre o site</a>
+                    </p>
                 </div>
                 <div class="col">
                     <p><a href="setores-vias.html"
@@ -186,16 +188,15 @@
                             e Vias</a></p>
                 </div>
                 <div class="col">
-                    <p><a href="#"
+                    <p><a href="https://www.instagram.com" target="_blank"
                             class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Instagram</a>
                     </p>
                 </div>
             </div>
             <div class="row gx-3">
                 <div class="col">
-                    <p><a href="#"
-                            class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Contato</a>
-                    </p>
+                    <p><a class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"
+                            href="#" data-bs-toggle="modal" data-bs-target="#modalContato">Contato</a></p>
                 </div>
                 <div class="col">
                     <p><a href="equipamentos.html"
@@ -203,16 +204,15 @@
                         </a></p>
                 </div>
                 <div class="col">
-                    <p><a href="#"
+                    <p><a href="https://www.youtube.com/" target="_blank"
                             class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">YouTube</a>
                     </p>
                 </div>
             </div>
             <div class="row gx-3">
                 <div class="col">
-                    <p><a href="#"
-                            class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Termos
-                            de uso</a></p>
+                    <p><a class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"
+                            href="#" data-bs-toggle="modal" data-bs-target="#modalTermos">Termos de Uso</a></p>
                 </div>
                 <div class="col">
                     <p><a href="noticias.html"
@@ -220,13 +220,101 @@
                     </p>
                 </div>
                 <div class="col">
-                    <p><a href="#"
+                    <p><a href="#" data-bs-toggle="modal" data-bs-target="#modalSugestao"
                             class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Enviar
                             sugestão de setor</a></p>
                 </div>
             </div>
         </div>
     </footer>
+
+
+    <!-- Modais dos Links do Footer -->
+
+    <!-- Modal Sobre -->
+    <div class="modal fade" id="modalSobre" tabindex="-1" aria-labelledby="modalSobreLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="modalSobreLabel">Sobre o site</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                </div>
+                <div class="modal-body">
+                    Este site foi desenvolvido como projeto acadêmico para a disciplina de Web Design.
+                    O objetivo é divulgar informações sobre setores e vias de escalada.
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Modal Contato -->
+    <div class="modal fade" id="modalContato" tabindex="-1" aria-labelledby="modalContatoLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="modalContatoLabel">Contato</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                </div>
+                <div class="modal-body">
+                    Dúvidas ou sugestões? Entre em contato pelo e-mail: <strong>contato@segpronta.com</strong>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Modal Termos de Uso -->
+    <div class="modal fade" id="modalTermos" tabindex="-1" aria-labelledby="modalTermosLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="modalTermosLabel">Termos de Uso</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                </div>
+                <div class="modal-body">
+                    As informações neste site são de uso educativo. Escalar é uma atividade de risco, escale com
+                    segurança.
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Modal Enviar Sugestão -->
+    <div class="modal fade" id="modalSugestao" tabindex="-1" aria-labelledby="modalSugestaoLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <form>
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="modalSugestaoLabel">Sugestão de Setor</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="mb-3">
+                            <label for="nome" class="form-label">Seu nome</label>
+                            <input type="text" class="form-control" id="nome" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="local" class="form-label">Nome do setor</label>
+                            <input type="text" class="form-control" id="local" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="local" class="form-label">Local do setor</label>
+                            <input type="text" class="form-control" id="local" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="descricao" class="form-label">Descrição</label>
+                            <textarea class="form-control" id="descricao" rows="3" required></textarea>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="submit" class="btn btn-success">Enviar</button>
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
