--- a/login.html
+++ b/login.html
@@ -39,27 +39,51 @@
     </nav>
 
 
-     <!-- Formulario para o login -->
-    <div class="container d-flex justify-content-center align-items-center" style="min-height: 100vh;">
-        <div class="card p-4 shadow" style="width: 100%; max-width: 400px;">
-            <h3 class="text-center mb-4">Entrar no Seg Pronta</h3>
-            <form>
+    <div class="container d-flex justify-content-center align-items-center bg-light" style="min-height: 100vh;">
+        <div class="card shadow-lg p-4 rounded-4" style="width: 100%; max-width: 420px;">
+            <h2 class="text-center mb-4">Seg Pronta</h2>
+
+            <!-- Formulário de Login -->
+            <form id="loginForm">
+                <h5 class="text-center mb-3">Login</h5>
                 <div class="mb-3">
-                    <label for="email" class="form-label">Usuário ou E-mail</label>
-                    <input type="email" class="form-control" id="email" placeholder="Digite seu e-mail">
+                    <label for="loginEmail" class="form-label">E-mail</label>
+                    <input type="email" class="form-control" id="loginEmail" placeholder="exemplo@email.com" required>
                 </div>
                 <div class="mb-3">
-                    <label for="senha" class="form-label">Senha</label>
-                    <input type="password" class="form-control" id="senha" placeholder="Digite sua senha">
+                    <label for="loginSenha" class="form-label">Senha</label>
+                    <input type="password" class="form-control" id="loginSenha" placeholder="Digite sua senha" required>
                 </div>
-                <button type="submit" class="btn btn-primary w-100">Entrar</button>
+                <button type="submit" class="btn btn-warning w-100">Entrar</button>
                 <div class="text-center mt-3">
                     <a href="#">Esqueci minha senha</a><br>
-                    <a href="index.html">← Voltar ao site</a>
+                    <a href="#" id="mostrarCadastro">Não tem conta? Cadastre-se</a>
+                </div>
+            </form>
+
+            <!-- Formulário de Cadastro (inicialmente oculto) -->
+            <form id="cadastroForm" class="d-none">
+                <h5 class="text-center mb-3">Cadastrar-se</h5>
+                <div class="mb-3">
+                    <label for="cadastroNome" class="form-label">Nome</label>
+                    <input type="text" class="form-control" id="cadastroNome" required>
+                </div>
+                <div class="mb-3">
+                    <label for="cadastroEmail" class="form-label">E-mail</label>
+                    <input type="email" class="form-control" id="cadastroEmail" required>
+                </div>
+                <div class="mb-3">
+                    <label for="cadastroSenha" class="form-label">Senha</label>
+                    <input type="password" class="form-control" id="cadastroSenha" required>
+                </div>
+                <button type="submit" class="btn btn-success w-100">Cadastrar</button>
+                <div class="text-center mt-3">
+                    <a href="#" id="voltarLogin">← Já tem conta? Entrar</a>
                 </div>
             </form>
         </div>
     </div>
+
 
 
 
@@ -80,9 +104,9 @@
             </div>
             <div class="row gx-3">
                 <div class="col">
-                    <p><a href="#"
-                            class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Sobre
-                            o site</a></p>
+                    <p> <a class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"
+                            href="#" data-bs-toggle="modal" data-bs-target="#modalSobre">Sobre o site</a>
+                    </p>
                 </div>
                 <div class="col">
                     <p><a href="setores-vias.html"
@@ -90,16 +114,15 @@
                             e Vias</a></p>
                 </div>
                 <div class="col">
-                    <p><a href="#"
+                    <p><a href="https://www.instagram.com" target="_blank"
                             class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Instagram</a>
                     </p>
                 </div>
             </div>
             <div class="row gx-3">
                 <div class="col">
-                    <p><a href="#"
-                            class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Contato</a>
-                    </p>
+                    <p><a class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"
+                            href="#" data-bs-toggle="modal" data-bs-target="#modalContato">Contato</a></p>
                 </div>
                 <div class="col">
                     <p><a href="equipamentos.html"
@@ -107,16 +130,15 @@
                         </a></p>
                 </div>
                 <div class="col">
-                    <p><a href="#"
+                    <p><a href="https://www.youtube.com/" target="_blank"
                             class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">YouTube</a>
                     </p>
                 </div>
             </div>
             <div class="row gx-3">
                 <div class="col">
-                    <p><a href="#"
-                            class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Termos
-                            de uso</a></p>
+                    <p><a class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"
+                            href="#" data-bs-toggle="modal" data-bs-target="#modalTermos">Termos de Uso</a></p>
                 </div>
                 <div class="col">
                     <p><a href="noticias.html"
@@ -124,13 +146,123 @@
                     </p>
                 </div>
                 <div class="col">
-                    <p><a href="#"
+                    <p><a href="#" data-bs-toggle="modal" data-bs-target="#modalSugestao"
                             class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Enviar
                             sugestão de setor</a></p>
                 </div>
             </div>
         </div>
     </footer>
+
+
+    <!-- Modais dos Links do Footer -->
+
+    <!-- Modal Sobre -->
+    <div class="modal fade" id="modalSobre" tabindex="-1" aria-labelledby="modalSobreLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="modalSobreLabel">Sobre o site</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                </div>
+                <div class="modal-body">
+                    Este site foi desenvolvido como projeto acadêmico para a disciplina de Web Design.
+                    O objetivo é divulgar informações sobre setores e vias de escalada.
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Modal Contato -->
+    <div class="modal fade" id="modalContato" tabindex="-1" aria-labelledby="modalContatoLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="modalContatoLabel">Contato</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                </div>
+                <div class="modal-body">
+                    Dúvidas ou sugestões? Entre em contato pelo e-mail: <strong>contato@segpronta.com</strong>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Modal Termos de Uso -->
+    <div class="modal fade" id="modalTermos" tabindex="-1" aria-labelledby="modalTermosLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="modalTermosLabel">Termos de Uso</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                </div>
+                <div class="modal-body">
+                    As informações neste site são de uso educativo. Escalar é uma atividade de risco, escale com
+                    segurança.
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Modal Enviar Sugestão -->
+    <div class="modal fade" id="modalSugestao" tabindex="-1" aria-labelledby="modalSugestaoLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <form>
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="modalSugestaoLabel">Sugestão de Setor</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="mb-3">
+                            <label for="nome" class="form-label">Seu nome</label>
+                            <input type="text" class="form-control" id="nome" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="local" class="form-label">Nome do setor</label>
+                            <input type="text" class="form-control" id="local" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="local" class="form-label">Local do setor</label>
+                            <input type="text" class="form-control" id="local" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="descricao" class="form-label">Descrição</label>
+                            <textarea class="form-control" id="descricao" rows="3" required></textarea>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="submit" class="btn btn-success">Enviar</button>
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+
+    <script>
+        document.getElementById("mostrarCadastro").addEventListener("click", function () {
+            document.getElementById("loginForm").classList.add("d-none");
+            document.getElementById("cadastroForm").classList.remove("d-none");
+        });
+
+        document.getElementById("voltarLogin").addEventListener("click", function () {
+            document.getElementById("cadastroForm").classList.add("d-none");
+            document.getElementById("loginForm").classList.remove("d-none");
+        });
+
+        document.getElementById("loginForm").addEventListener("submit", function (e) {
+            e.preventDefault();
+            alert("Login realizado com sucesso!");
+            window.location.href = "index.html";
+        });
+
+        document.getElementById("cadastroForm").addEventListener("submit", function (e) {
+            e.preventDefault();
+            alert("Cadastro realizado com sucesso!");
+            window.location.href = "index.html";
+        });
+    </script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous">
