--- a/setores-vias.html
+++ b/setores-vias.html
@@ -11,6 +11,7 @@
         integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/stylesheet.css">
+    <link rel="icon" href="images/mosquetao_icon.png" type="image/x-icon">
 
 </head>
 
